<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:textAlignment="center"
    tools:context=".MainActivity">

    <LinearLayout
        android:background="#212121"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/screen"
            android:visibility="visible"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:background="#252323"
            android:gravity="center|end"
            android:text="@string/screenText"
            android:textColor="@color/white"
            android:maxHeight="100sp"
            android:maxLength="200"
            app:autoSizeMaxTextSize="40sp"
            app:autoSizeMinTextSize="10sp"
            app:autoSizeStepGranularity="2sp"
            app:autoSizeTextType="uniform"
            />
        <TextView
            android:id="@+id/screen2"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.05"
            android:background="#252323"
            android:gravity="center"
            android:text="@string/screenText"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/screen3"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:background="#252323"
            android:gravity="center|end"
            android:text="@string/screenText"
            android:textColor="@color/white"
            android:textSize="40sp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.15"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button0"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="3dp"
                android:layout_weight="0.25"
                android:backgroundTint="#1B263B"
                android:text="@string/button0"
                android:textColor="#A39C8F"
                android:textSize="25sp"
                tools:ignore="NestedWeights,DuplicateSpeakableTextCheck" />

            <Button
                android:id="@+id/buttonClearAll"
                android:backgroundTint="#462025"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="3dp"
                android:layout_weight="0.25"
                android:text="@string/buttonClearAll"
                android:textSize="25sp"
                android:textColor="#E7AF36"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/buttonClear"
                android:backgroundTint="#462025"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="3dp"
                android:layout_weight="0.25"
                android:text="@string/buttonClear"
                android:textSize="25sp"
                android:textColor="#E7AF36"
                tools:ignore="SpeakableTextPresentCheck"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/buttonDivision"
                android:backgroundTint="#70798C"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="3dp"
                android:layout_weight="0.25"
                android:text="@string/buttonDivision"
                android:textSize="25sp"
                android:textColor="@color/white"
                style="?android:attr/buttonBarButtonStyle" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.15"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button1"
                android:backgroundTint="#1B263B"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="3dp"
                android:layout_weight="0.25"
                android:text="@string/button1"
                android:textSize="25sp"
                android:textColor="#A39C8F"
                tools:ignore="NestedWeights"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/button2"
                android:backgroundTint="#1B263B"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="3dp"
                android:layout_weight="0.25"
                android:text="@string/button2"
                android:textSize="25sp"
                android:textColor="#A39C8F"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/button3"
                android:backgroundTint="#1B263B"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="3dp"
                android:layout_weight="0.25"
                android:text="@string/button3"
                android:textSize="25sp"
                android:textColor="#A39C8F"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/buttonAddition"
                android:backgroundTint="#70798C"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="3dp"
                android:layout_weight="0.25"
                android:text="@string/buttonAddition"
                android:textSize="25sp"
                android:textColor="@color/white"
                style="?android:attr/buttonBarButtonStyle" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.15"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button4"
                android:backgroundTint="#1B263B"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="3dp"
                android:layout_weight="0.25"
                android:text="@string/button4"
                android:textSize="25sp"
                android:textColor="#A39C8F"
                tools:ignore="NestedWeights"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/button5"
                android:backgroundTint="#1B263B"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="3dp"
                android:layout_weight="0.25"
                android:text="@string/button5"
                android:textSize="25sp"
                android:textColor="#A39C8F"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/button6"
                android:backgroundTint="#1B263B"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="3dp"
                android:layout_weight="0.25"
                android:text="@string/button6"
                android:textSize="25sp"
                android:textColor="#A39C8F"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/buttonSubtraction"
                android:backgroundTint="#70798C"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="3dp"
                android:layout_weight="0.25"
                android:text="@string/buttonSubtraction"
                android:textSize="25sp"
                android:textColor="@color/white"
                style="?android:attr/buttonBarButtonStyle" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.15"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button7"
                android:backgroundTint="#1B263B"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="3dp"
                android:layout_weight="0.25"
                android:text="@string/button7"
                android:textSize="25sp"
                android:textColor="#A39C8F"
                tools:ignore="NestedWeights"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/button8"
                android:backgroundTint="#1B263B"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="3dp"
                android:layout_weight="0.25"
                android:text="@string/button8"
                android:textSize="25sp"
                android:textColor="#A39C8F"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/button9"
                android:backgroundTint="#1B263B"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="3dp"
                android:layout_weight="0.25"
                android:text="@string/button9"
                android:textSize="25sp"
                android:textColor="#A39C8F"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/buttonMultiply"
                android:backgroundTint="#70798C"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="3dp"
                android:layout_weight="0.25"
                android:text="@string/buttonMultiply"
                android:textSize="25sp"
                android:textColor="@color/white"
                style="?android:attr/buttonBarButtonStyle" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonEqual"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="3dp"
                android:layout_weight="0.1"
                android:backgroundTint="#E7AF36"
                android:text="@string/buttonEqual"
                android:textColor="#462025"
                android:textSize="40sp"
                tools:ignore="NestedWeights,SpeakableTextPresentCheck" />

        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>